syntax = "proto3";
/*
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";
*/

package EndpointChecker;

service EndpointChecker {
  rpc CheckEndpoint (EndpointRequest) returns (EndpointReply) {}
}

// userful https://developers.google.com/protocol-buffers/docs/proto3

message EndpointRequest {
	string Name = 1;
	string IPaddress = 2;
	string Platform = 3;
}

message EndpointReply {
	bool Success = 1;
	string Error = 2;
	string StartTime = 3;
	string EndTime = 4;
}